<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardCornerRadius="@dimen/dialog_corner_radius"
    app:cardElevation="@dimen/dialog_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/gradient_position">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_extra_life_title"
            android:textAppearance="@style/Bold.TextColor.VeryLarge"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_extra_life_description"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/dialog_extra_life_btn_yes"
            android:layout_marginTop="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toBottomOf="@+id/textDescription"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/dialog_extra_life_btn_no"
            android:layout_marginTop="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toBottomOf="@+id/textDescription"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>