<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardCornerRadius="@dimen/dialog_corner_radius"
    app:cardElevation="@dimen/dialog_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ranking_congratulation"
            android:textAppearance="@style/Bold.TextColor.Large"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ranking_description"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldWorldRecord"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_name"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/textDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWorldRecord"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/colorPrimaryDark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/dialog_save"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/fieldWorldRecord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>