<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:alpha="0.15"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/one_protest" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            tools:text="Resultado: 0"
            android:textAppearance="@style/Bold.TextColor.VeryLarge"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textPersonalRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Récord personal: 0"
            android:textAppearance="@style/Bold.TextColor.VeryLarge"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textResult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textWorldRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Récord mundial: 0"
            android:textAppearance="@style/Bold.TextColor.VeryLarge"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textPersonalRecord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAppearance="@style/Bold.TextColor.Large"
            app:layout_constraintTop_toBottomOf="@+id/textWorldRecord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/play_again"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAppearance="@style/Bold.TextColor.Large"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/rate_on_play_store"
            android:textAppearance="@style/Bold.TextColor.Large"
            app:layout_constraintTop_toBottomOf="@+id/btnShare"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/best_score"
            android:textAppearance="@style/Bold.TextColor.Large"
            app:layout_constraintTop_toBottomOf="@+id/btnRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/otherAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_apps"
        android:textAppearance="@style/Regular.TextColor.VeryVeryLarge"
        app:fontFamily="@font/cutout"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewOtherApps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewOtherApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_app" />


    <ImageView
        android:id="@+id/imagenLoading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:src="@drawable/image_loading"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/otherAppText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/loading_image" />

</androidx.constraintlayout.widget.ConstraintLayout>