<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appBarLayout"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:elevation="@dimen/no_elevation">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/height_status_bar"
        android:layout_height="100dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/width_back"
                android:layout_height="@dimen/height_back"
                android:paddingBottom="@dimen/padding_back"
                android:src="@drawable/back"
                android:contentDescription="@string/back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutExtendedTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_title"
                    android:textAppearance="@style/Regular.TextColor.ToolbatTitle"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutLife"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_back"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/lifeFirst"
                    android:layout_width="35dp"
                    android:layout_height="@dimen/height_back"
                    android:src="@drawable/ic_life_on"
                    android:contentDescription="@string/life"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/lifeSecond"
                    android:layout_width="35dp"
                    android:layout_height="@dimen/height_back"
                    android:src="@drawable/ic_life_on"
                    android:contentDescription="@string/life"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lifeFirst"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>